[gd_scene load_steps=13 format=2]

[ext_resource path="res://demo_scenes/data/models_3d/TableTennis/Untitled.png" type="Texture" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://demo_scenes/experiments/TestWalkInPlace.gd" type="Script" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_WalkInPlace.tscn" type="PackedScene" id=9]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 8, 8, 8 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 16, 16 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 8, 1, 8 )

[node name="TestWalkInPlace" type="Spatial"]
script = ExtResource( 7 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 3 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 2 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 3 )]

[node name="OQ_UILabel" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 6 )]

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 5 )]

[node name="Locomotion_WalkInPlace" parent="OQ_ARVROrigin" instance=ExtResource( 9 )]

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]
